app1/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: echo-route-1
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: app1.klubinzenjera.com
spec:
  parentRefs:
    - name: gateway1
  hostnames:
    - app1.klubinzenjera.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /1
      backendRefs:
        - name: echo1
          port: 80
